--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -25,8 +25,8 @@
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/openpublish/templates.docs.msft",
-      "branch": "master",
+      "url": "https://github.com/Microsoft/templates.docs.msft",
+      "branch": "master-prerelease",
       "branch_mapping": {}
     }
   ],
