--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -3,9 +3,9 @@
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
-      "docset_name": "E2E_DocsBranch_Dynamic1",
-      "build_source_folder": "E2E_DocsBranch_Dynamic1",
-      "build_output_subfolder": "E2E_DocsBranch_Dynamic1",
+      "docset_name": "E2E_DocsBranch_Dynamic",
+      "build_source_folder": "E2E_DocsBranch_Dynamic",
+      "build_output_subfolder": "E2E_DocsBranch_Dynamic",
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [],
