--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -28,7 +28,17 @@
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master-prerelease",
       "branch_mapping": {}
+    }, {
+      "path_to_root": "_themes.pdf",
+      "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
+      "branch": "master",
+      "branch_mapping": {}
     }
   ],
+  "Targets": {
+    "Pdf": {
+      "template_folder": "_themes.pdf"
+    }
+  },
   "need_generate_pdf_url_template": false
 }
